@@ -1,1 +1,8 @@
 # LocalityNN
+
+TODO
+---
+There's a lot of code reuse between the Generator and Simulator templates.  
+Abstract the parts of functionality that are common, such as `get_params` etc, 
+into a base template, and rename the Generator and Simulator templates to 
+reflect individual status.
